products/developer-portal/cd/applications/devportal/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zilliqa-devportal
  namespace: default
  labels:
    "app.kubernetes.io/name": 'zilliqa-devportal'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": 'zilliqa-devportal'
