products/developer-portal/cd/applications/devportal/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zilliqa-devportal
  namespace: default
  labels:
    "app.kubernetes.io/name": 'zilliqa-devportal'
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: zilliqa-devportal.platform.prd.z7a.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zilliqa-devportal
            port:
              number: 80
  - host: dev.zilliqa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zilliqa-devportal
            port:
              number: 80
